--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desarrollando un proyecto frontend con tailwind",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "postcss css/tailwind.css -o public/css/styles.css"
   },
   "keywords": [],
   "author": "Edson Salas <rolvez97@gmail.com>",
